# PanddaInspectGtk4Window

./: CMakeLists.txt  main.cpp
build-PanddaInspectGtk4Window-Desktop_Qt_6_5_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Pandda2InspectGTK4Window.xml  PanddaInspectGtk4Window  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-PanddaInspectGtk4Window-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-65309d69ff67e251d53b.json  cmakeFiles-v1-aa24405cb18362fb38e8.json  codemodel-v2-4ef6ec0583fd94dc13f9.json  index-2025-02-13T12-55-16-0063.json  target-PanddaInspectGtk4Window-Debug-fe002aafc995375416d7.json  target-PanddaInspectGtk4Window_autogen-Debug-a82eab45d559fd52294e.json  target-PanddaInspectGtk4Window_autogen_timestamp_deps-Debug-b0b73f639bb5adef6570.json
build-PanddaInspectGtk4Window-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-PanddaInspectGtk4Window-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-PanddaInspectGtk4Window-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QCoreApplication.8FF996186183A421.idx  __stddef_max_align_t.h.3CAD3376CB22F781.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  atomic_base.h.F118387B313E4F7F.idx  cairo-deprecated.h.9D7AB62637B6438A.idx  cairo-features.h.959452606DEDACC9.idx  (+779 more)
build-PanddaInspectGtk4Window-Desktop_Qt_6_5_2_GCC_64bit-Debug/PanddaInspectGtk4Window_autogen/: deps
glade/: Pandda2InspectGTK3Window.glade  Pandda2InspectGTK3Window.glade~  Pandda2InspectGTK3Window_corrected.ui
